# autora-theorist-testtheorist

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
challenge/: theorist_benchmarking.ipynb
docs/: Additional Example.ipynb  Basic Usage.ipynb  index.md  quickstart.md
src/autora/theorist/testtheorist/: __init__.py
tests/: test_testtheorist.py
