[project]
# UPDATE THIS BEFORE PUBLISHING
name = "testtheorist"
description = "test theorist"
authors = [{ name = "Sebastian Musslick", email = "sebastian@musslick.de" }]
dynamic = ["version"]

readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8,<4"

# ADD NEW DEPENDENCIES HERE
dependencies = [
    "autora-core",
    "scikit-learn",
    "autora",
]

[project.optional-dependencies]
dev = [
    "autora-core[dev]",
    "autora"
]

[project.urls]
homepage = "http://www.empiricalresearch.ai"
repository = "https://github.com/musslick/autora-theorist-testtheorist"
documentation = "https://autoresearch.github.io/autora/"


[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

